--- a/style/jason-default.css
+++ b/style/jason-default.css
@@ -183,6 +183,7 @@ table {
   border-top: 1px solid #666;
   border-bottom: 1px solid #666;
   width: 100%;
+  font-size: 12px;
 }
 table thead th {
   border-bottom: 1px solid #ddd;
